# tether

./: .gitignore  README.md  pyproject.toml
api/: db.py  main.py  models.py
notebooks/: encoder.ipynb
scripts/: save_metadata.py
tether-demo/: package-lock.json  package.json
tether-demo/src/: App.tsx
tether-demo/src/api/: base.ts
tether-demo/src/nodes/: TableDomainNode.tsx  index.ts
tether/checkpoints/: item_autoencoder.pth
tether/dataset/: repository.py  source.py
tether/model/: cluster.py  item.py  relation.py
tether/utils/: database.py
